# cardiovascular_system_hemodynamics

./: Exercise Hemodynamics 1.ipynb  Exercise Hemodynamics 1_sol.ipynb  Exercise Hemodynamics 2.ipynb  Exercise Hemodynamics 2_sol.ipynb  Exercise Hemodynamics 3.ipynb  Exercise Hemodynamics 3_sol.ipynb  Hemodynamics Portfolio.docx  README.md  Slides -Hemodynamics.pptx  pyproject.toml
