[project]
name = "cardiovascular-system-hemodynamics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "heartpy>=1.2.7",
    "ipython>=9.7.0",
    "ipywidgets",
    "jupyter>=1.1.1",
    "matplotlib",
    "nbformat",
    "numpy",
    "pandas",
    "pyside6",
    "setuptools>=80.9.0",
    "wfdb>=4.3.0",
]

[dependency-groups]
dev = [
    "ipykernel",
    "uv",
]
