[project]
name = "cardiovascular-system-hemodynamics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython",
    "ipywidgets",
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "ipykernel",
]


[dependency-groups]
dev = [
    "ipykernel",
    "uv",
]
[tool.uv]
link-mode = "copy"